# swiftwater-framework

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  404.html  ACTION_LOG.md  AGENTS.md  CLAUDE.md  LICENSE  MEMORY.md  PLAN.md  README.md  RELEASING.md  SECRETS.md  Taskfile.yml  copier.yml  cross-repo-convention.md  index.html  memory-convention.md  mkdocs.yml  objects.inv  pi-convention.md  pyproject.toml
.claude/: settings.json
_archive/: ARCHIVED_ACTION_LOG.md  ARCHIVED_PLAN.md
_memory/: app-environment-tokens-never-production.md  arduino-setup-task-no-node24-release.md  audit-prepare-snapshot-stderr-breaks-cli-runner-output.md  check-agent-prompt-fit-before-adding-to-target.md  commit-gate-hook-false-matches-git-commit-substring.md  commit-gate-hook-timing.md  compose-profile-dev-needs-observability-overlay.md  contracts-agent-pact-v4-false-positive.md  controller-skip-marker-recipe.md  cross-repo-commit-needs-local-plan-staged.md  design-spec-stale-verify-docs-against-code.md  dlq-pii-compliance-followup.md  docker-as-root-host-uid-gap.md  dogfood-e2e-harness-and-task-ci-coverage-gap.md  eval-fixture-patch-truncation.md  eval-fixtures-coupled-to-template.md  flags-is-dual-use-gate-skips-advisory.md  flaky-realize-cached-copytree-git-gc-race.md  framework-consumes-patterns-via-github-vendoring.md  framework-eval-no-builtin-resume.md  gate-cadence-framework-slices.md  gitleaks-staged-vs-history-and-fixture-allowlist.md  hybrid-region-marker-token-in-prose.md  llm-vs-agents-battery-taxonomy.md  master-branch-protection-ruleset.md  never-batch-dependent-pipeline-steps.md  new-file-eval-fixtures-empty-diff.md  noop-gate-inherits-stale-fail.md  obs-completeness-guard-already-exists.md  (+21 more)
(+1836 files in other folders)
