[project]
name = "framework-cli"
version = "0.1.0"
description = "CLI scaffold framework for solid, observable, testable Python projects"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "copier>=9.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "mypy>=1.13",
    "fastapi>=0.115",
    "httpx>=0.28",
]

[project.scripts]
framework = "framework_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/framework_cli"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]

[tool.mypy]
files = ["src"]
python_version = "3.12"
